<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#000000" android:foregroundTintMode="add" tools:context=".listen">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10sp">

        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/string_listen"
                android:textSize="50sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center"

                android:orientation="vertical">
            <ImageButton
                    android:id="@+id/listen_button"

                    android:layout_width="320dp"
                    android:layout_height="320dp"

                    android:background="@drawable/orange_radius"
                    android:src="@drawable/listen_icon"
                    android:contentDescription="@string/string_talk"
                    android:scaleType="center"
                    android:tint="#ffffff"
                    tools:layout_editor_absoluteX="45dp"
                    tools:layout_editor_absoluteY="203dp" />

            <TextView
                    android:id="@+id/alert_listen"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/alert_listen"
                    android:textColor="@color/colorAccent"
                    android:textSize="36sp"
                    android:visibility="invisible"
                    tools:layout_editor_absoluteX="147dp"
                    tools:layout_editor_absoluteY="600dp" />
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/playing_time"
                        android:textSize="36sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="/"
                        android:textSize="36sp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/listen_timer"
                        android:textSize="36sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>