<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SeeDainay">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="8dp"
            tools:layout_editor_absoluteX="8dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diary"
                android:textSize="50sp"
                android:gravity="center_horizontal">
        </TextView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#fcad03"
                    android:text="@string/title"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"/>
            <TextView
                    android:id="@+id/Seetitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_gravity="center">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#fcad03"
                    android:text="@string/memo"
                    android:textSize="30sp"
                    android:textColor="#FFFFFF"/>
            <TextView
                    android:id="@+id/See_Memo_Content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine|text|textImeMultiLine"
                    android:lines="5"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1"
                >
            <ImageView
                    android:id="@+id/See_imagePreview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EFEFEF"
                    android:src="@drawable/image"/>
        </LinearLayout>
        <View
                android:layout_width="0dp"
                android:layout_height="5dp"/>
        <View
                android:layout_width="0dp"
                android:layout_height="5dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>